[project]
name = "venice-research-agent-demo"
version = "0.1.0"
description = "Minimal deep research agent demo using Venice AI for LLM calls"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
venice-research = "main:main"
